@@ -102,5 +102,7 @@ $messages['checking'] = 'Prüfe...';
 
 $messages['nospellerrors'] = 'Keine Rechtschreibfehler gefunden';
 
+$messages['folderdeleted'] = 'Ordner erfolgreich gelöscht';
+
 
 ?>
