@@ -90,4 +90,17 @@ $messages['nocontactsreturned'] = 'No contacts were found';
 
 $messages['nosearchname'] = 'Please enter a contact name or email address';
 
+$messages['searchsuccessful'] = '$nr messages found';
+
+$messages['searchnomatch'] = 'Search returned no matches';
+
+$messages['searching'] = 'Searching...';
+
+$messages['checking'] = 'Checking...';
+
+$messages['nospellerrors'] = 'No spelling errors found';
+
+$messages['folderdeleted'] = 'Folder successfully deleted';
+
+
 ?>
