@@ -104,5 +104,7 @@ $messages['checking'] = 'Checking...';
 
 $messages['nospellerrors'] = 'No spelling errors found';
 
+$messages['folderdeleted'] = 'Folder successfully deleted';
+
 
 ?>
