@@ -6,6 +6,8 @@ CHANGELOG RoundCube Webmail
 - Alter links in HTML messages (Bug #1326402)
 - Added fallback if host not found in 'mail_domain' array
 - Applied patch of Charles to highlight droptargets (Ticket #1473034)
+- Fixed folder renaming (Bug #1483914)
+- Added confirmation message after deleting a folder
 
 
 2006/07/25 (thomasb)
